--- a/one/templates/metronic/layout/aside/_menu.html
+++ b/one/templates/metronic/layout/aside/_menu.html
@@ -10,7 +10,7 @@
     class="menu menu-column menu-title-gray-800 menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500"
     id="#kt_aside_menu" data-kt-menu="true">
     <div class="menu-item">
-      <div class="menu-content pt-8 pb-2">
+      <div class="menu-content pb-2">
         <span
           class="menu-section text-muted text-uppercase fs-8 ls-1">Apps</span>
       </div>
