Update push notification

--- a/one/templates/metronic/base.html
+++ b/one/templates/metronic/base.html
@@ -235,7 +235,9 @@
 </script>
 <script>
   $(document).ready(function() {
-    $("#webpush-subscribe-button").click();
+    setTimeout(function (){
+      $("#webpush-subscribe-button").trigger('click');
+    }, 2000)
   });
 </script>
 {% block inline_javascript %}
