--- a/one/templates/metronic/auth/group_detail.html
+++ b/one/templates/metronic/auth/group_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static object_filter %}
+{% load static object_tags %}
 
 {% block title %}User: {{ object.username }}{% endblock %}
 
