--- a/one/templates/metronic/auth/group_form.html
+++ b/one/templates/metronic/auth/group_form.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static i18n object_filter %}
+{% load static i18n object_tags %}
 
 {% block title %}User: {{ object.username }}{% endblock %}
 
