--- a/one/templates/metronic/layout/page-title/_default.html
+++ b/one/templates/metronic/layout/page-title/_default.html
@@ -3,18 +3,18 @@
      data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_header_nav'}"
      class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
   <!--begin::Title-->
-  <h1 class="d-flex align-items-center text-dark fw-bolder fs-3 my-1">No
-    Toolbar</h1>
+  <h1 class="d-flex align-items-center text-dark fw-bolder fs-3 my-1">{{ breadcrumb.title }}</h1>
   <!--end::Title-->
   <!--begin::Separator-->
   <span class="h-20px border-gray-300 border-start mx-4"></span>
   <!--end::Separator-->
   <!--begin::Breadcrumb-->
   <ul class="breadcrumb breadcrumb-separatorless fw-bold fs-7 my-1">
+    {% if breadcrumb.parent %}
     <!--begin::Item-->
     <li class="breadcrumb-item text-muted">
-      <a href="/metronic8/demo1/../demo1/index.html"
-         class="text-muted text-hover-primary">Home</a>
+      <a href="{{ breadcrumb.parent }}"
+         class="text-muted text-hover-primary">{% translate 'Danh sách' %}</a>
     </li>
     <!--end::Item-->
     <!--begin::Item-->
@@ -22,16 +22,9 @@
       <span class="bullet bg-gray-300 w-5px h-2px"></span>
     </li>
     <!--end::Item-->
+    {% endif %}
     <!--begin::Item-->
-    <li class="breadcrumb-item text-muted">Toolbars</li>
-    <!--end::Item-->
-    <!--begin::Item-->
-    <li class="breadcrumb-item">
-      <span class="bullet bg-gray-300 w-5px h-2px"></span>
-    </li>
-    <!--end::Item-->
-    <!--begin::Item-->
-    <li class="breadcrumb-item text-dark">No Toolbar</li>
+    <li class="breadcrumb-item text-dark">{{ breadcrumb.current }}</li>
     <!--end::Item-->
   </ul>
   <!--end::Breadcrumb-->
