--- a/one/templates/metronic/users/user_list.html
+++ b/one/templates/metronic/users/user_list.html
@@ -4,15 +4,84 @@
 {% block title %}User: {{ object.username }}{% endblock %}
 
 {% block content %}
-  {{ fields|json_script:'table_config' }}
+  <div>test user table</div>
+  fields: {{ fields|json_script:'table_config' }}
   <br>
-  {{ nested_fields }}
+  nested_fields: {{ nested_fields }}
   <br>
+
+  <table class="table table-row-dashed table-row-gray-300 align-middle gs-0 gy-4" id="table_fields">
+    <!--begin::Table head-->
+    <thead>
+    <tr class="fw-bolder text-muted">
+      {#      <th class="w-25px">#}
+      {#        <div class="form-check form-check-sm form-check-custom form-check-solid">#}
+      {#          <input class="form-check-input" type="checkbox" value="1" data-kt-check="true"#}
+      {#                 data-kt-check-target=".widget-9-check"/>#}
+      {#        </div>#}
+      {#      </th>#}
+      {#      <th class="min-w-150px">Authors</th>#}
+      {#      <th class="min-w-140px">Company</th>#}
+      {#      <th class="min-w-120px">Progress</th>#}
+      {#      <th class="min-w-100px text-end">Actions</th>#}
+      {% for item in fields %}
+        <th>{{ item.verbose }}</th>
+      {% endfor %}
+    </tr>
+    </thead>
+    <!--end::Table head-->
+    <!--begin::Table body-->
+    <tbody>
+
+    </tbody>
+    <!--end::Table body-->
+  </table>
+
+
+  </table>
 {% endblock content %}
 {% block inline_javascript %}
   <script>
     $.get("{% url 'api:users-list' %}", function (data) {
       console.log(data);
     });
+
+    var fields =  {{ fields|safe }};
+    var columns = []
+
+    Object.keys(fields).map(key => {
+      columns.push({
+        data: fields[key]['col']
+      })
+    })
+    console.log('fields: ', fields)
+    console.log('columns: ', columns)
+    var table;
+
+    $(document).ready(function () {
+      table = $('#table_fields').DataTable({
+        'processing': true,
+        'serverSide': true,
+        'searching': true,
+        'searchDelay': 350,
+        "autoWidth": false,
+        'serverMethod': 'get',
+        'ajax': {
+          'url': '{% url 'api:users-list' %}',
+          "data": function (d) {
+            return $.extend(d, {
+              "department": $("#DEPARTMENT_FILTER").val(),
+              "search": {
+                value: $("#input_search_table").val()
+              }
+            });
+          }
+        },
+
+        columnDefs: [],
+        order: [],
+        columns
+      });
+    })
   </script>
 {% endblock inline_javascript %}
