--- a/one/templates/metronic/django/forms/widgets/date.html
+++ b/one/templates/metronic/django/forms/widgets/date.html
@@ -1,4 +1,6 @@
 {% include "django/forms/widgets/input.html" %}
 <script defer>
-  $("#{% for name, value in widget.attrs.items %}{% if name == 'id' %}{{ value|stringformat:'s' }}{% endif %}{% endfor %}").flatpickr();
+  $("#{% for name, value in widget.attrs.items %}{% if name == 'id' %}{{ value|stringformat:'s' }}{% endif %}{% endfor %}").flatpickr(
+
+  );
 </script>
