--- a/one/templates/metronic/django/forms/widgets/time.html
+++ b/one/templates/metronic/django/forms/widgets/time.html
@@ -1,8 +1,10 @@
 {% include "django/forms/widgets/input.html" %}
 <script defer>
   $("#{% for name, value in widget.attrs.items %}{% if name == 'id' %}{{ value|stringformat:'s' }}{% endif %}{% endfor %}").flatpickr(
-    {enableTime: true,
-    noCalendar: true,
-    dateFormat: "H:i",}
+    {
+      enableTime: true,
+      noCalendar: true,
+      dateFormat: "H:i",
+    }
   );
 </script>
