--- a/one/templates/metronic/django/forms/widgets/select.html
+++ b/one/templates/metronic/django/forms/widgets/select.html
@@ -1,5 +1,49 @@
-<select name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>{% for group_name, group_choices, group_index in widget.optgroups %}{% if group_name %}
-  <optgroup label="{{ group_name }}">{% endif %}{% for option in group_choices %}
-  {% include option.template_name with widget=option %}{% endfor %}{% if group_name %}
-  </optgroup>{% endif %}{% endfor %}
-</select>
+{% load i18n %}
+{% if widget.attrs.input_type == 'NULLSWITCH' %}
+<div class="mb-10 d-flex">
+  {% for group_name, group_choices, group_index in widget.optgroups %}
+    {% for option in group_choices %}
+      <div class="form-check form-switch form-check-custom form-check-solid me-10">
+      <input
+        class="form-check-input h-30px w-30px"
+        type="radio"
+        name="{{ widget.name }}"
+        id="{% for name, value in widget.attrs.items %}{% if name == 'id' %}{{ value|stringformat:'s' }}{% endif %}{% endfor %}"
+        {% include "django/forms/widgets/attrs.html" %}
+        value="{{ option.value|stringformat:'s' }}"/>
+      <label class="form-check-label" for="{% for name, value in widget.attrs.items %}{% if name == 'id' %}{{ value|stringformat:'s' }}{% endif %}{% endfor %}">
+          {{ option.label }}
+      </label>
+      </div>
+    {% endfor %}
+  {% endfor %}
+</div>
+{% else %}
+  <select
+    name="{{ widget.name }}"
+    data-allow-clear="true"
+    class="form-select" data-placeholder="Select an option"
+    {% include "django/forms/widgets/attrs.html" %}>
+      {% for group_name, group_choices, group_index in widget.optgroups %}
+        {% if group_name %}
+          <optgroup label="{{ group_name }}">
+        {% endif %}
+        {% for option in group_choices %}
+          {% include option.template_name with widget=option %}
+        {% endfor %}
+        {% if group_name %}
+          </optgroup>
+        {% endif %}
+      {% endfor %}
+  </select>
+  <script defer>
+    $('#{% for name, value in widget.attrs.items %}{% if name == 'id' %}{{ value|stringformat:'s' }}{% endif %}{% endfor %}').select2({
+      templateResult: function (item) {
+        if(item.text.includes('<span>')){
+          return $(item.text)
+        }
+        return item.text
+      }
+    });
+  </script>
+{% endif %}
