--- a/one/templates/metronic/django/forms/widgets/select_option.html
+++ b/one/templates/metronic/django/forms/widgets/select_option.html
@@ -1,1 +1,7 @@
-<option value="{{ widget.value|stringformat:'s' }}"{% include "django/forms/widgets/attrs.html" %}>{{ widget.label }}</option>
+<option
+  value="{{ widget.value|stringformat:'s' }}"
+  {% include "django/forms/widgets/attrs.html" %}
+  inner="{{ widget.label }}"
+>
+  {{ widget.label|safe }}
+</option>
