--- a/one/templates/metronic/layout/aside/_menu.html
+++ b/one/templates/metronic/layout/aside/_menu.html
@@ -9,7 +9,154 @@
   <div
     class="menu menu-column menu-title-gray-800 menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500"
     id="#kt_aside_menu" data-kt-menu="true">
+    {% if user.is_superuser %}
+      <div class="menu-item">
+        <div class="menu-content pb-2">
+          <span
+            class="menu-section text-muted text-uppercase fs-8 ls-1">{% translate 'Configurations' %}</span>
+        </div>
+      </div>
 
+      {% if ENABLE_MENU_SETTINGS %}
+      <div class="menu-item">
+        <a class="menu-link" href="#"
+           title="{% translate 'Settings' %}"
+           data-bs-toggle="tooltip" data-bs-trigger="hover"
+           data-bs-dismiss="click" data-bs-placement="right">
+              <span class="menu-icon">
+                <!--begin::Svg Icon | path: icons/duotune/general/gen019.svg-->
+                <span class="svg-icon svg-icon-2">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24"
+                       height="24" viewBox="0 0 24 24" fill="none">
+                    <path
+                      d="M17.5 11H6.5C4 11 2 9 2 6.5C2 4 4 2 6.5 2H17.5C20 2 22 4 22 6.5C22 9 20 11 17.5 11ZM15 6.5C15 7.9 16.1 9 17.5 9C18.9 9 20 7.9 20 6.5C20 5.1 18.9 4 17.5 4C16.1 4 15 5.1 15 6.5Z"
+                      fill="black"/>
+                    <path opacity="0.3"
+                          d="M17.5 22H6.5C4 22 2 20 2 17.5C2 15 4 13 6.5 13H17.5C20 13 22 15 22 17.5C22 20 20 22 17.5 22ZM4 17.5C4 18.9 5.1 20 6.5 20C7.9 20 9 18.9 9 17.5C9 16.1 7.9 15 6.5 15C5.1 15 4 16.1 4 17.5Z"
+                          fill="black"/>
+                  </svg>
+                </span>
+                <!--end::Svg Icon-->
+              </span>
+          <span class="menu-title">{% translate 'Settings' %}</span>
+        </a>
+      </div>
+      {% endif %}
+
+      {% if ENABLE_MENU_EMAIL_TEMPLATE %}
+      <div class="menu-item">
+        <a class="menu-link" href="#"
+           title="{% translate 'Email Templates' %}"
+           data-bs-toggle="tooltip" data-bs-trigger="hover"
+           data-bs-dismiss="click" data-bs-placement="right">
+              <span class="menu-icon">
+                <!--begin::Svg Icon | path: icons/duotune/communication/com011.svg-->
+                  <span class="svg-icon svg-icon-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24"
+                         height="24" viewBox="0 0 24 24" fill="none">
+                      <path opacity="0.3"
+                            d="M21 19H3C2.4 19 2 18.6 2 18V6C2 5.4 2.4 5 3 5H21C21.6 5 22 5.4 22 6V18C22 18.6 21.6 19 21 19Z"
+                            fill="black"/>
+                      <path
+                        d="M21 5H2.99999C2.69999 5 2.49999 5.10005 2.29999 5.30005L11.2 13.3C11.7 13.7 12.4 13.7 12.8 13.3L21.7 5.30005C21.5 5.10005 21.3 5 21 5Z"
+                        fill="black"/>
+                    </svg>
+                  </span>
+                  <!--end::Svg Icon-->
+              </span>
+          <span class="menu-title">{% translate 'Email Templates' %}</span>
+        </a>
+      </div>
+      {% endif %}
+
+      {% if ENABLE_MENU_USER_MANAGEMENT %}
+      <div data-kt-menu-trigger="click" class="menu-item menu-accordion mb-1">
+        <span class="menu-link">
+          <span class="menu-icon">
+            <!--begin::Svg Icon | path: icons/duotune/general/gen051.svg-->
+            <span class="svg-icon svg-icon-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24"
+                   height="24" viewBox="0 0 24 24" fill="none">
+                <path opacity="0.3"
+                      d="M20.5543 4.37824L12.1798 2.02473C12.0626 1.99176 11.9376 1.99176 11.8203 2.02473L3.44572 4.37824C3.18118 4.45258 3 4.6807 3 4.93945V13.569C3 14.6914 3.48509 15.8404 4.4417 16.984C5.17231 17.8575 6.18314 18.7345 7.446 19.5909C9.56752 21.0295 11.6566 21.912 11.7445 21.9488C11.8258 21.9829 11.9129 22 12.0001 22C12.0872 22 12.1744 21.983 12.2557 21.9488C12.3435 21.912 14.4326 21.0295 16.5541 19.5909C17.8169 18.7345 18.8277 17.8575 19.5584 16.984C20.515 15.8404 21 14.6914 21 13.569V4.93945C21 4.6807 20.8189 4.45258 20.5543 4.37824Z"
+                      fill="black"/>
+                <path
+                  d="M14.854 11.321C14.7568 11.2282 14.6388 11.1818 14.4998 11.1818H14.3333V10.2272C14.3333 9.61741 14.1041 9.09378 13.6458 8.65628C13.1875 8.21876 12.639 8 12 8C11.361 8 10.8124 8.21876 10.3541 8.65626C9.89574 9.09378 9.66663 9.61739 9.66663 10.2272V11.1818H9.49999C9.36115 11.1818 9.24306 11.2282 9.14583 11.321C9.0486 11.4138 9 11.5265 9 11.6591V14.5227C9 14.6553 9.04862 14.768 9.14583 14.8609C9.24306 14.9536 9.36115 15 9.49999 15H14.5C14.6389 15 14.7569 14.9536 14.8542 14.8609C14.9513 14.768 15 14.6553 15 14.5227V11.6591C15.0001 11.5265 14.9513 11.4138 14.854 11.321ZM13.3333 11.1818H10.6666V10.2272C10.6666 9.87594 10.7969 9.57597 11.0573 9.32743C11.3177 9.07886 11.6319 8.9546 12 8.9546C12.3681 8.9546 12.6823 9.07884 12.9427 9.32743C13.2031 9.57595 13.3333 9.87594 13.3333 10.2272V11.1818Z"
+                  fill="black"/>
+              </svg>
+            </span>
+            <!--end::Svg Icon-->
+          </span>
+          <span class="menu-title">{% translate 'User Management' %}</span>
+          <span class="menu-arrow"></span>
+        </span>
+        <div class="menu-sub menu-sub-accordion">
+          <div class="menu-item">
+            <a class="menu-link" href="#">
+                <span class="menu-bullet">
+                  <span class="bullet bullet-dot"></span>
+                </span>
+              <span class="menu-title">{% translate 'Users' %}</span>
+            </a>
+          </div>
+          <div class="menu-item">
+            <a class="menu-link" href="#">
+                <span class="menu-bullet">
+                  <span class="bullet bullet-dot"></span>
+                </span>
+              <span class="menu-title">{% translate 'Groups' %}</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      {% endif %}
+
+      {% if ENABLE_MENU_PAGES %}
+      <div data-kt-menu-trigger="click" class="menu-item menu-accordion mb-1">
+        <span class="menu-link">
+          <span class="menu-icon">
+            <!--begin::Svg Icon | path: icons/duotune/ecommerce/ecm007.svg-->
+            <span class="svg-icon svg-icon-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24"
+                   height="24" viewBox="0 0 24 24" fill="none">
+                <path
+                  d="M21 9V11C21 11.6 20.6 12 20 12H14V8H20C20.6 8 21 8.4 21 9ZM10 8H4C3.4 8 3 8.4 3 9V11C3 11.6 3.4 12 4 12H10V8Z"
+                  fill="black"/>
+                <path
+                  d="M15 2C13.3 2 12 3.3 12 5V8H15C16.7 8 18 6.7 18 5C18 3.3 16.7 2 15 2Z"
+                  fill="black"/>
+                <path opacity="0.3"
+                      d="M9 2C10.7 2 12 3.3 12 5V8H9C7.3 8 6 6.7 6 5C6 3.3 7.3 2 9 2ZM4 12V21C4 21.6 4.4 22 5 22H10V12H4ZM20 12V21C20 21.6 19.6 22 19 22H14V12H20Z"
+                      fill="black"/>
+              </svg>
+            </span>
+            <!--end::Svg Icon-->
+          </span>
+          <span class="menu-title">{% translate 'Pages' %}</span>
+          <span class="menu-arrow"></span>
+        </span>
+        <div class="menu-sub menu-sub-accordion">
+          <div class="menu-item">
+            <a class="menu-link" href="#">
+                <span class="menu-bullet">
+                  <span class="bullet bullet-dot"></span>
+                </span>
+              <span class="menu-title">{% translate 'Homepage' %}</span>
+            </a>
+          </div>
+          <div class="menu-item">
+            <a class="menu-link" href="#">
+                <span class="menu-bullet">
+                  <span class="bullet bullet-dot"></span>
+                </span>
+              <span class="menu-title">{% translate 'Contact page' %}</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      {% endif %}
+
+    {% endif %}
   </div>
   <!--end::Menu-->
 </div>
