update image viewer

--- a/one/templates/metronic/django/forms/widgets/image.html
+++ b/one/templates/metronic/django/forms/widgets/image.html
@@ -1,4 +1,5 @@
 {% load i18n static %}
+<div class="d-block">
 {% if widget.is_initial %}
   <!--begin::Image input-->
   <div class="image-input image-input-outline" data-kt-image-input="true"
@@ -104,5 +105,7 @@
      </span>
     <!--end::Remove button-->
   </div>
+
   <!--end::Image input-->
 {% endif %}
+</div>
