custome pages module

--- a/one/templates/metronic/layout/aside/_menu.html
+++ b/one/templates/metronic/layout/aside/_menu.html
@@ -137,19 +137,11 @@
         </span>
         <div class="menu-sub menu-sub-accordion">
           <div class="menu-item">
-            <a class="menu-link" href="#">
+            <a class="menu-link" href="{% url 'pages:list' %}">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
                 </span>
-              <span class="menu-title">{% translate 'Homepage' %}</span>
-            </a>
-          </div>
-          <div class="menu-item">
-            <a class="menu-link" href="#">
-                <span class="menu-bullet">
-                  <span class="bullet bullet-dot"></span>
-                </span>
-              <span class="menu-title">{% translate 'Contact page' %}</span>
+              <span class="menu-title">{% translate 'FlatPage' %}</span>
             </a>
           </div>
         </div>
