--- a/one/templates/metronic/pages/page_list.html
+++ b/one/templates/metronic/pages/page_list.html
@@ -41,50 +41,16 @@
     <!--end::Card header-->
     <!--begin::Card body-->
     <div class="card-body py-4">
-      <!--begin::Table-->
-      <table class="table align-middle table-row-dashed fs-6 gy-5"
-             id="kt_table_settings"
-             data-server-side="true"
-             data-ajax="{{ ENDPOINT.LIST }}?format=datatables">
-        <!--begin::Table head-->
-        <thead>
-        <!--begin::Table row-->
-        <tr class="text-start text-muted fw-bolder fs-7 text-uppercase gs-0">
-          <th class="w-10px pe-2" data-data="id">
-            <div
-              class="form-check form-check-sm form-check-custom form-check-solid me-3">
-              <input class="form-check-input" type="checkbox"
-                     data-kt-check="true"
-                     data-kt-check-target="#kt_table_users .form-check-input"
-                     value="1"/>
-            </div>
-          </th>
-          {% for field in fields %}
-            {% if field.col != 'content' %}
-              <th class="min-w-125px" data-data="{{ field.col }}">{{ field.verbose }}</th>
-            {% endif %}
-          {% endfor %}
-          <th class="text-end min-w-100px" data-data="id">Actions</th>
-        </tr>
-        <!--end::Table row-->
-        </thead>
-        <!--end::Table head-->
-        <!--begin::Table body-->
-        <!--end::Table body-->
-      </table>
-      <!--end::Table-->
+      {% include 'partials/widgets/tables/_table.html' %}
     </div>
     <!--end::Card body-->
   </div>
   <!--end::Card-->
 {% endblock content %}
+
 {% block javascript %}
   <!--begin::Page Vendors Javascript(used by this page)-->
   <script
     src="{% static 'plugins/custom/datatables/datatables.bundle.js' %}"></script>
   <!--end::Page Vendors Javascript-->
 {% endblock javascript %}
-{% block inline_javascript %}
-  <script
-    src="{% static 'js/tables/table.js' %}"></script>
-{% endblock inline_javascript %}
