--- a/one/templates/metronic/django/forms/widgets/number.html
+++ b/one/templates/metronic/django/forms/widgets/number.html
@@ -1,1 +1,9 @@
-{% include "django/forms/widgets/input.html" %}
+<!--{% include "django/forms/widgets/input.html" %}-->
+<input
+  type="{{ widget.type }}"
+  name="{{ widget.name }}"{% if widget.value != None %} value="{{ widget.value|stringformat:'s' }}"{% endif %}
+  {% include "django/forms/widgets/attrs.html" %}>
+
+<script defer>
+
+</script>
