--- a/one/templates/metronic/base.html
+++ b/one/templates/metronic/base.html
@@ -35,8 +35,7 @@
   <!--begin::Global Stylesheets Bundle(used by all pages)-->
   <link href="{% static 'plugins/global/plugins.bundle.css' %}"
         rel="stylesheet" type="text/css"/>
-  <link href="{% static 'css/style.bundle.css' %}" rel="stylesheet"
-        type="text/css"/>
+  <link href="{% static 'css/style.bundle.css' %}" rel="stylesheet" type="text/css"/>
 
   <!--end::Global Stylesheets Bundle-->
   <!--begin::Global Javascript Bundle(used by all pages)-->
