--- a/one/templates/metronic/base.html
+++ b/one/templates/metronic/base.html
@@ -36,7 +36,7 @@
   <link href="{% static 'plugins/global/plugins.bundle.css' %}"
         rel="stylesheet" type="text/css"/>
   <link href="{% static 'css/style.bundle.css' %}" rel="stylesheet" type="text/css"/>
-
+<link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css" />
   <!--end::Global Stylesheets Bundle-->
   <!--begin::Global Javascript Bundle(used by all pages)-->
   <script src="{% static 'plugins/global/plugins.bundle.js' %}"></script>
