--- a/one/templates/metronic/root.html
+++ b/one/templates/metronic/root.html
@@ -21,7 +21,7 @@
 		<!--begin::Global Stylesheets Bundle(used by all pages)-->
 		<link href="{% static 'plugins/global/plugins.bundle.css' %}" rel="stylesheet" type="text/css" />
 		<link href="{% static 'css/style.bundle.css' %}" rel="stylesheet" type="text/css" />
-		<link href="{% static '/static/css/custom.css' %}" rel="stylesheet" type="text/css" />
+		<link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css" />
 		<!--end::Global Stylesheets Bundle-->
 	</head>
 	<!--end::Head-->
