custome pages module

--- a/one/templates/metronic/pages/page_list.html
+++ b/one/templates/metronic/pages/page_list.html
@@ -54,3 +54,7 @@
     src="{% static 'plugins/custom/datatables/datatables.bundle.js' %}"></script>
   <!--end::Page Vendors Javascript-->
 {% endblock javascript %}
+{% block inline_javascript %}
+  <script
+    src="{% static 'js/tables/table.js' %}"></script>
+{% endblock inline_javascript %}
