--- a/one/templates/metronic/partials/widgets/tables/_table.html
+++ b/one/templates/metronic/partials/widgets/tables/_table.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 <!--begin::Table-->
 <table class="table align-middle table-row-dashed fs-6 gy-5"
-       id="kt_table_"
+       id="kt_table_settings"
        data-server-side="true"
        data-ajax="{{ ENDPOINT.LIST }}?format=datatables">
   <!--begin::Table head-->
