- handle checkbox all - handle delete with attribute data-url in button delete

--- a/one/templates/settings/setting_list.html
+++ b/one/templates/settings/setting_list.html
@@ -30,7 +30,8 @@
                   data-kt-user-table-select="selected_count"></span>Selected
           </div>
           <button type="button" class="btn btn-danger"
-                  data-kt-user-table-select="delete_selected">Delete Selected
+                  data-kt-user-table-select="delete_selected"
+          data-url="url_api_here">Delete Selected
           </button>
         </div>
         <!--end::Group actions-->
