--- a/one/templates/defaults/_list.html
+++ b/one/templates/defaults/_list.html
@@ -17,7 +17,7 @@
         <div class="d-flex justify-content-end"
              data-kt-user-table-toolbar="base">
           {% include 'partials/widgets/tables/_filter.html' %}
-          {% include 'partials/widgets/tables/_export.html' %}
+{#          {% include 'partials/widgets/tables/_export.html' %}#}
           {% include 'partials/widgets/tables/_new_object.html' %}
 
         </div>
