--- a/one/templates/defaults/_list.html
+++ b/one/templates/defaults/_list.html
@@ -60,7 +60,9 @@
             </div>
           </th>
           {% for field in fields %}
+            {% if field.col != 'content' %}
             <th class="min-w-125px" data-data="{{ field.col }}">{{ field.verbose }}</th>
+            {% endif %}
           {% endfor %}
           <th class="text-end min-w-100px" data-data="id">Actions</th>
         </tr>
