--- a/one/templates/partials/widgets/tables/_table.html
+++ b/one/templates/partials/widgets/tables/_table.html
@@ -18,9 +18,9 @@
       </div>
     </th>
     {% for field in fields %}
-      {% if field.col != 'content' %}
-        <th class="min-w-125px" data-data="{{ field.col }}">{{ field.verbose }}</th>
-      {% endif %}
+    {% if field.col != 'content' %}
+    <th class="min-w-125px" data-data="{{ field.col }}">{{ field.verbose }}</th>
+    {% endif %}
     {% endfor %}
     <th class="text-end min-w-100px" data-data="id">{% translate 'Actions' %}</th>
   </tr>
@@ -31,3 +31,10 @@
   <!--end::Table body-->
 </table>
 <!--end::Table-->
+<script defer>
+  <!--  document ready -->
+  $(document).ready(function () {
+    const table = DT.init('kt_table_settings');
+    console.log('table init----', table)
+  })
+</script>
