--- a/one/templates/partials/widgets/tables/_table.html
+++ b/one/templates/partials/widgets/tables/_table.html
@@ -32,6 +32,7 @@
 </table>
 <!--end::Table-->
 <script defer>
+   console.log('table init----')
   <!--  document ready -->
   $(document).ready(function () {
     const table = DT.init('kt_table_settings');
