--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -132,6 +132,9 @@
 <!--layout-partial:layout/drawers/_chat-drawer.html-->
 {% include 'layout/drawers/_chat-drawer.html' %}
 
+<!--layout-partial:layout/drawers/_debug-drawer.html-->
+{% include 'layout/drawers/_debug-drawer.html' %}
+
 <!--end::Drawers-->
 <!--end::Main-->
 
